# minlog_python

./: .gitignore  README.md  pyproject.toml
minlog/: __init__.py  _test.py  logger.py
